tests/compError/tooManyArguments.ucl
// compError
// error: too many arguments passed to function 'tests/compError/tooManyArguments.ucl:two'
// tests/compError/tooManyArguments.ucl:10 -> function call here

const two = fn(arg1: Number, arg2: String): Bool {
	ret true;
};

// incorrect types
two(true, 2, "3");